# InSeqt

./: CMakeLists.txt  Makefile_auto  Makefile_g++  example_main.html  example_overlaps.html  index.html
aligns/: KmerAlignCore.cc  KmerDynProg.cc  KmerDynProg.h
base/: CommandLineParser.h  RandomStuff.h  StringUtil.cc  StringUtil.h
data/: InSeqtMainReport.html  basicstats.out  scatter.ps  seq.ps  size.ps  summary.html  win.ps
src/: AssembleSiteLaps.cc  BasicStats.cc  BasicStats2HTML.cc  BuildKmerProfile.cc  Coordinate.cc  Coordinate.h  DNAVector.cc  DataRead.h  Database.cc  Database.h  EstimateErrors.cc  FindOverlapCands.cc  FindSiteLaps.cc  HTMLTemp.cc  HTMLTemp.h  InSeqt.cc  Insect.cc  KmerProfile.cc  LapStats.cc  MakeBasicReport.cc  MakeOverlapReport.cc  MakeSiteMap.cc  OptiMapAlignUnit.cc  OptiMapAlignUnit.h  ParseAligns.cc  PlotGCContent.cc  PoolBySites.cc  PullReads.cc  RSAlign.cc  ReplaceFastaHead.cc  RestSiteAlignUnit.cc  RestSiteAlignUnit.h  RunFindOverlapCands.cc  ScoreKmers.cc  SequenceMatch.cc  SequenceMatch.h  SimulateReadData.cc  SiteLaps.cc  TestKmerProfile.cc
templates/: basic_template.html  lap_template.html  summary.html
util/: SComm.cc
visual/: Bitmap.cc  Color.cc  Histogram.cc  Histogram.h  PieChart.cc  PieChart.h
